--- a/notebook/cosmicsworks.ipynb
+++ b/notebook/cosmicsworks.ipynb
@@ -28,6 +28,9 @@
     "\n",
     "set -e\n",
     "\n",
+    "\n",
+    "az login --use-device-code\n",
+    "\n",
     "# Set your resource group and Cosmos DB account name\n",
     "RESGROUP=\"\"\n",
     "ACCTNAME=\"\"\n",
@@ -36,6 +39,14 @@
     "\n",
     "export ACCOUNT_URI=$(az cosmosdb show --resource-group \"$RESGROUP\" --name \"$ACCTNAME\" --query documentEndpoint --output tsv)\n",
     "export ACCOUNT_KEY=$(az cosmosdb list-keys --resource-group \"$RESGROUP\" --name \"$ACCTNAME\" --query primaryMasterKey --output tsv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4acae756",
+   "metadata": {},
+   "source": [
+    "# Set configure settings and configure API on Azure Cloud"
    ]
   },
   {
