Chore: add CI gh actions

--- a/notebook/cosmicsworks.ipynb
+++ b/notebook/cosmicsworks.ipynb
@@ -13,6 +13,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8e6789ec",
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Logint to Azure using device code\n",
+    "\n",
+    "az account show || az login --use-device-code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "dcbed969",
    "metadata": {
     "tags": [
@@ -29,11 +45,9 @@
     "set -e\n",
     "\n",
     "\n",
-    "az login --use-device-code\n",
-    "\n",
     "# Set your resource group and Cosmos DB account name\n",
-    "RESGROUP=\"\"\n",
-    "ACCTNAME=\"\"\n",
+    "RESGROUP=\"cosmicworks-rg\"\n",
+    "ACCTNAME=\"cosmicworks-cosmosdb\"\n",
     "\n",
     "az cosmosdb create --resource-group \"$RESGROUP\" --name \"$ACCTNAME\"\n",
     "\n",
@@ -86,8 +100,10 @@
    "source": [
     "# Configure the Catalog API\n",
     "spark.conf.set(\"spark.sql.catalog.cosmosCatalog\", \"com.azure.cosmos.spark.CosmosCatalog\")\n",
-    "spark.conf.set(\"spark.sql.catalog.cosmosCatalog.spark.cosmos.accountEndpoint\", config[\"spark.cosmos.accountEndpoint\"])\n",
-    "spark.conf.set(\"spark.sql.catalog.cosmosCatalog.spark.cosmos.accountKey\", config[\"spark.cosmos.accountKey\"])"
+    "spark.conf.set(\"spark.sql.catalog.cosmosCatalog.spark.cosmos.accountEndpoint\", \n",
+    "    config[\"spark.cosmos.accountEndpoint\"])\n",
+    "spark.conf.set(\"spark.sql.catalog.cosmosCatalog.spark.cosmos.accountKey\", \n",
+    "    config[\"spark.cosmos.accountKey\"])"
    ]
   },
   {
@@ -167,8 +183,28 @@
     "  .load()\n",
     "\n",
     "# Render schema\n",
-    "df.printSchema()\n",
-    "\n",
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61a99bc9",
+   "metadata": {},
+   "source": [
+    "Render data examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ac9f6c6",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Render filtered data    \n",
     "df.where(\"quantity < 20\") \\\n",
     "  .show()\n",
