--- a/notebook/cosmicsworks.ipynb
+++ b/notebook/cosmicsworks.ipynb
@@ -76,8 +76,8 @@
    "source": [
     "# Set configuration settings\n",
     "import os\n",
-    "URL = os.environ['ACCOUNT_URI']\n",
-    "KEY = os.environ['ACCOUNT_KEY']\n",
+    "URL = os.environ['COSMOS_DB_ENDPOINT']\n",
+    "KEY = os.environ['COSMOS_KEY']\n",
     "\n",
     "config = {\n",
     "  \"spark.cosmos.accountEndpoint\": URL,\n",
