--- a/notebook/cosmicsworks.ipynb
+++ b/notebook/cosmicsworks.ipynb
@@ -21,7 +21,7 @@
    },
    "outputs": [],
    "source": [
-    "# Logint to Azure using device code\n",
+    "# Login to Azure using device code\n",
     "\n",
     "az account show || az login --use-device-code"
    ]
@@ -46,10 +46,8 @@
     "\n",
     "\n",
     "# Set your resource group and Cosmos DB account name\n",
-    "RESGROUP=\"cosmicworks-rg\"\n",
-    "ACCTNAME=\"cosmicworks-cosmosdb\"\n",
-    "\n",
-    "az cosmosdb create --resource-group \"$RESGROUP\" --name \"$ACCTNAME\"\n",
+    "RESGROUP=\"rg-swa-$(date +'%Y%m%d')\"\n",
+    "ACCTNAME=\"my-cosmos-db-account\"\n",
     "\n",
     "export ACCOUNT_URI=$(az cosmosdb show --resource-group \"$RESGROUP\" --name \"$ACCTNAME\" --query documentEndpoint --output tsv)\n",
     "export ACCOUNT_KEY=$(az cosmosdb list-keys --resource-group \"$RESGROUP\" --name \"$ACCTNAME\" --query primaryMasterKey --output tsv)"
@@ -76,8 +74,8 @@
    "source": [
     "# Set configuration settings\n",
     "import os\n",
-    "URL = os.environ['COSMOS_DB_ENDPOINT']\n",
-    "KEY = os.environ['COSMOS_KEY']\n",
+    "URL = os.environ['ACCOUNT_URI']\n",
+    "KEY = os.environ['ACCOUNT_KEY']\n",
     "\n",
     "config = {\n",
     "  \"spark.cosmos.accountEndpoint\": URL,\n",
