--- a/notebook/cosmicsworks.ipynb
+++ b/notebook/cosmicsworks.ipynb
@@ -7,7 +7,15 @@
    "source": [
     "# Getting started\n",
     "\n",
-    "- Create required Azure resources."
+    "// Adopted from: https://learn.microsoft.com/en-us/azure/cosmos-db/nosql/tutorial-spark-connector?pivots=programming-language-python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00b5a8f7",
+   "metadata": {},
+   "source": [
+    "Create required Azure resources"
    ]
   },
   {
@@ -43,7 +51,6 @@
     "%%bash\n",
     "\n",
     "set -e\n",
-    "\n",
     "\n",
     "# Set your resource group and Cosmos DB account name\n",
     "RESGROUP=\"rg-swa-$(date +'%Y%m%d')\"\n",
@@ -204,10 +211,8 @@
    "outputs": [],
    "source": [
     "# Render filtered data    \n",
-    "df.where(\"quantity < 20\") \\\n",
-    "  .show()\n",
-    "df.filter(df.clearance == True) \\\n",
-    "  .show(1)\n",
+    "df.where(\"quantity < 20\").show()\n",
+    "df.filter(df.clearance == True).show(1)\n",
     "\n",
     "# Render five rows of unfiltered and untruncated data    \n",
     "df.show(5, False)\n",
